# toddler-copilot-extension

./: .gitignore  .ignore  Cargo.toml  Justfile  README.md
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  deploy.yml
samples/: chat_request_from_ij.json  chat_request_from_vs_code.json  chat_request_from_vs_code_with_selection.json  chat_request_from_vs_code_withcurrent_editor_and_file_context.json  chat_request_from_web.json  toto.json
src/: agent.rs  config.rs  copilot_public_keys.rs  lib.rs  main.rs  messages.rs  oauth.rs  state.rs  tracing.rs
