[package]
name = "toddler-copilot-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
# disable default features to disable the Shuttle default tracing subscriber
shuttle-runtime = { version = "0.49", default-features = false }
shuttle-axum = "0.49"

axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie-private", "typed-header"] }
headers = "0.4"
tokio = "1.28"
serde = "1.0"
serde_json = "1.0"
envy = "0.4"
anyhow = "1.0"
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.3"
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
time = "0.3"

ecdsa = { version = "0.16", features = ["pem", "verifying", "serde", "der"] }
p256 = "0.13"
signature = "2.2"
base64 = "0.22"

[profile.release]
debug = true
